--- a/environment.yaml
+++ b/environment.yaml
@@ -1,4 +1,4 @@
-name: '532'
+name: '532_group_21'
 channels:
     - conda-forge
     - defaults
@@ -8,11 +8,6 @@ dependencies:
     - dash
     - dash-bootstrap-components
     - plotly
-    - r-base
-    - r-tidyverse
-    - r-shiny
-    - r-languageserver
-    - r-plotly
     - pip
 pip:
     - dash-vega-components
