--- a/environment.yaml
+++ b/environment.yaml
@@ -9,5 +9,6 @@ dependencies:
     - dash-bootstrap-components>=1.5.0
     - plotly>=5.0.0
     - pip
-pip:
-    - dash-vega-components
+    - pip:
+        - dash-vega-components
+        - Flask-Caching==2.1.0
