--- a/environment.yaml
+++ b/environment.yaml
@@ -8,6 +8,7 @@ dependencies:
     - dash>=2.16.0
     - dash-bootstrap-components>=1.5.0
     - plotly>=5.0.0
+    - pytest
     - pip
     - pip:
         - dash-vega-components
